<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#C3F2CB"
    tools:context=".SearchFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/search_field"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:background="@android:drawable/editbox_background"
            android:ems="10"
            android:fontFamily="@font/dela_gothic_one"
            android:hint="Enter title..."
            android:inputType="text" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/search_field"
            android:backgroundTint="#000000"
            android:fontFamily="@font/dela_gothic_one"
            android:text="Search"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchMoviesView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp" />

</LinearLayout>
