<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.hfad.whattowatch.favorites.MediaViewModel" />
    </data>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:background="#C3F2CB"
    android:orientation="vertical"
    tools:context=".DetailFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tvMediaTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dela_gothic_one"
            android:gravity="center"
            android:text="Title"
            android:paddingTop="10dp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvMediaInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/tvMediaTitle"
            android:fontFamily="@font/dela_gothic_one"
            android:text="[type] [year] [genre]"
            android:textAlignment="center"
            android:textColor="@color/black" />

        <ImageButton
            android:id="@+id/favoriteButton"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="116dp"
            android:layout_height="88dp"
            android:layout_alignTop="@id/tvMediaTitle"
            android:layout_alignParentRight="true"
            android:layout_marginTop="1dp"
            android:layout_marginRight="0dp"
            android:background="#00FFFFFF"
            android:padding="9dp"
            android:scaleType="fitCenter"
            android:src="@drawable/favorite_button"
            android:onClick="@{() -> viewModel.addMedia()}"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/mediaImage"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitCenter"
        android:src="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="Description"
        android:fontFamily="@font/dela_gothic_one"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/whereToWatchButton"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/black"
        android:layout_gravity="center"
        android:fontFamily="@font/dela_gothic_one"
        android:text="See where to watch" />



</LinearLayout>

</layout>