...
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_homeFragment_to_favoritesFragment"
            app:destination="@id/favoritesFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.hfad.whattowatch.DetailFragment"
        android:label="Movie Information"
        tools:layout="@layout/fragment_detail" >
        <action
            android:id="@+id/action_detailFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
...
